scroll output messages to bottom on append

--- a/src/backend/views/index.ejs
+++ b/src/backend/views/index.ejs
@@ -165,7 +165,7 @@ msg:
 						<div class="col-12">
 							<div class="form-group">
 								<label for="controlMessages">Control messages</label>
-								<textarea disabled id="controlMessages" class="form-control" ng-bind="outputMessages"></textarea>
+								<textarea disabled id="outputMessages" class="form-control" ng-bind="outputMessages"></textarea>
 							</div>
 						</div>
 					</div>
