--- a/src/frontend/style/zedide.css
+++ b/src/frontend/style/zedide.css
@@ -8,7 +8,7 @@ div.top {
 }
 
 div.editor-ctrl {
-    height: 75%;
+    height: 75vh;
 }
 
 div.output-ctrl {
@@ -40,4 +40,8 @@ tt {
 div.register-row-label {
     background-color: rgba(0, 98, 204, 0.15);
     border-color: rgba(0, 86, 179, 0.2);
+}
+
+tt.unprintable-char {
+    color: darkslategray;
 }
