--- a/src/backend/views/index.ejs
+++ b/src/backend/views/index.ejs
@@ -7,7 +7,7 @@
 	</head>
 	<body ng-controller="ideController">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">ZedIDE</a>
+			<a class="navbar-brand" href="https://github.com/borb/zedide" target="_blank">ZedIDE</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
