--- a/src/backend/views/index.ejs
+++ b/src/backend/views/index.ejs
@@ -39,8 +39,8 @@
 		<div class="container-fluid editor-ctrl relative-top">
 			<!-- editor and toolbox -->
 			<div class="row">
-				<div class="col-9">
-					<textarea id="code-editor">
+				<div class="col-9 d-flex flex-column">
+					<textarea id="code-editor" class="">
 ; sample program which writes "Hello, world!" to tty attached to io port $0a
 
 	; at address $0, blank a & flags, jump to main program
@@ -188,24 +188,20 @@ msg:
 			</div>
 		</div>
 
-		<div class="container-fluid output-ctrl fixed-bottom">
+		<div class="container-fluid output-ctrl">
 			<!-- cpu output -->
 			<div class="row">
-				<div class="col-12">
-					<div class="form-group">
-						<label for="cpuOutput">CPU output port (port $0a)</label>
-						<textarea disabled id="cpuOutput" class="form-control" ng-bind="cpuOutput"></textarea>
-					</div>
+				<div class="col-12 form-group">
+					<label for="cpuOutput">CPU output port (port $0a)</label>
+					<textarea disabled id="cpuOutput" class="form-control" ng-bind="cpuOutput"></textarea>
 				</div>
 			</div>
 
 			<!-- assembler/control messages (and errors) -->
 			<div class="row">
-				<div class="col-12">
-					<div class="form-group">
-						<label for="controlMessages">Control messages</label>
-						<textarea disabled id="outputMessages" class="form-control" ng-bind="outputMessages"></textarea>
-					</div>
+				<div class="col-12 form-group">
+					<label for="controlMessages">Control messages</label>
+					<textarea disabled id="outputMessages" class="form-control" ng-bind="outputMessages"></textarea>
 				</div>
 			</div>
 		</div>
