--- a/src/frontend/style/zedide.css
+++ b/src/frontend/style/zedide.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 html, body {
-    min-height: 10vh;
     height: 100vh;
 }
 
@@ -11,19 +10,29 @@ div.top {
 
 div.editor-ctrl {
     height: 75vh;
+    flex: auto;
+    flex-direction: column;
+    flex-grow: 1;
+    border: 1px solid green;
 }
 
 div.output-ctrl {
-    height: 20%;
-    vertical-align: bottom;
+    /* height: 20%; */
+    height: auto;
+    position: absolute;
+    bottom: 0px;
+    display: inline-block
 }
 
 .CodeMirror {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
-    height: 75%;
-    width: 72%;
-    position: fixed;
+    /* width: 100%;
+    height: 100%; */
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .register-label {
